--- a/index.html
+++ b/index.html
@@ -2,7 +2,7 @@
 <html lang="en-us">
   <head>
     <meta charset="UTF-8">
-    <title>Tybeebythesea.GitHub.io by TybeeByTheSea</title>
+    <title>Tybeebythesea Tybee Island, GA</title>
     <meta name="viewport" content="width=device-width, initial-scale=1">
     <link rel="stylesheet" type="text/css" href="stylesheets/normalize.css" media="screen">
     <link href='https://fonts.googleapis.com/css?family=Open+Sans:400,700' rel='stylesheet' type='text/css'>
@@ -12,34 +12,25 @@
   
   <body>
     <section class="page-header">
-      <h1 class="project-name">Tybeebythesea.GitHub.io</h1>
+      <h1 class="project-name">Tybeebythesea.com</h1>
       <h2 class="project-tagline">Tybee By The Sea - Tybee Island, GA</h2>
     </section>
 
     <section class="main-content">
       <h3>
 <a id="tybee-by-the-sea" class="anchor" href="#tybee-by-the-sea" aria-hidden="true"><span aria-hidden="true" class="octicon octicon-link"></span></a><strong>Tybee by the Sea</strong>
-</h3>
-
-<hr>
+      </h3>
 
 <h2>
 <a id="tybee-island-ga" class="anchor" href="#tybee-island-ga" aria-hidden="true"><span aria-hidden="true" class="octicon octicon-link"></span></a><em>Tybee Island, GA</em>
 </h2>
 
-<p>Savannah, GA</p>
-
-<p><em>tennis courts</em>
-<em>Beach views</em>
-<em>Pool (and kids pool)</em>
-<em>Fishing</em>
-<em>Island Dining _
-_Island Activities</em></p>
+<p>just 10 mins from historic downtown Savannah, GA</p>
 
 <h3>
 <a id="welcome-to-github-pages" class="anchor" href="#welcome-to-github-pages" aria-hidden="true"><span aria-hidden="true" class="octicon octicon-link"></span></a>Welcome to TybeeByTheSea.</h3>
 
-<p> beach condo rental - fishing - surfing - seafood dining - Brand new pool area - Historic Tybee Island - Historic Savannah, GA - Kayak - paddle boarding - hiking - biking - Tennis - Beach fun </p>
+<p> beach condo rental - Island Activities - fishing - surfing - seafood dining - Brand new pool area (and a great kids pool) - Historic Tybee Island - Historic Savannah, GA - Kayak - paddle boarding - hiking - biking - Tennis - Beach fun </p>
 
 <h3>
 <a id="designer-templates" class="anchor" href="#designer-templates" aria-hidden="true"><span aria-hidden="true" class="octicon octicon-link"></span></a>Island Living</h3>
